# hoiku-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  alembic.ini  pyproject.toml  server.py
.agents/skills/adk-eval/: SKILL.md
.agents/skills/e2e/: SKILL.md
.agents/skills/uc-cycle/: SKILL.md  bootstrap.sh
.claude/: settings.json  settings.json.example
.claude/skills/adk-eval/: SKILL.md
.claude/skills/e2e/: SKILL.md
.claude/skills/run-pipeline/: SKILL.md
.claude/skills/uc-cycle/: SKILL.md
.github/workflows/: ci.yml  deploy.yml  eval-gate.yml  terraform.yml
docs/: agent-workflow.drawio  architecture.md  diagram-specs.md  system-architecture.drawio  ユースケース一覧.md  ライブ実行手順.md  設計コンテキスト.md
docs/diagram-assets/: README.md
eval/: CLAUDE.md  README.md  baseline.json  gate_policy.json  run_gate.py  test_config.json
eval/cases/: .gitkeep  child_record.evalset.json  diary_0_2.evalset.json  nursery_record.evalset.json
eval/judges/: judge_expression.md  judge_guideline_alignment.md  judge_ten_no_sugata.md
infra/: .gitignore  .terraform.lock.hcl  README.md  apis.tf  artifact_registry.tf  dns.tf  iam.tf  imports.tf  run_edge.tf  secrets.tf  sql.tf  terraform.tfvars  variables.tf  versions.tf  wif.tf
knowledge/: 文書作成指針.json  文書作成指針.md  様式テンプレート.json  表記ルール.json
migrations/: env.py
migrations/versions/: 0001_initial_archive.py  0002_users.py  0003_policy_books.py  0004_notation_books.py  0005_template_books.py  0006_child_name_gender.py  0007_classes.py  0008_feedback.py  0009_remove_class_age_band.py  0010_google_subject.py  0011_user_workspaces.py  0012_llm_budget_windows.py  0013_document_memory_sync.py  0014_document_mentioned_children.py
scripts/: evaluate_rag_retrieval.py  process_deletion_requests.py  provision_memory_bank.py  provision_rag_corpus.py  reset_account.py  run_child_record.py  run_class_monthly.py  run_improver.py  run_monthly.py  run_youroku.py  seed_children.py  seed_documents.py
src/hoiku_agent/: __init__.py  agent.py  config.py  logging_config.py  models.py
src/hoiku_agent/agents/: CLAUDE.md  __init__.py  author_agent.py  child_record_author_agent.py  class_monthly_author_agent.py  instructions.py  monthly_author_agent.py  nursery_record_author_agent.py  prompts.py  proofreader_agent.py  review_agent.py  upload_parser_agent.py
src/hoiku_agent/harness/: CLAUDE.md  __init__.py  aggregate.py  child_record.py  child_record_period.py  class_monthly.py  db.py  demo_seed.py  demo_seed_data.py  draft.py  finalize.py  git_ops.py  llm_budget.py  memory_writeback.py  monthly.py  notation_store.py  pipeline.py  policy_store.py  record_store.py  reference.py  router.py  schema_check.py  template_store.py  youroku.py
src/hoiku_agent/improver/: CLAUDE.md  __init__.py  improver_agent.py  prompts.py  tools.py
src/hoiku_agent/schemas/: __init__.py  class_monthly.py  document.py  domain.py  enums.py  notation.py  policy.py  proofread.py  template.py
src/hoiku_agent/tools/: __init__.py  ask_caregiver.py  fetch_reference.py  get_child_memory.py  knowledge_search.py  read_policy.py  recall_child_history.py  search_guideline.py  search_past_documents.py  search_records.py  validate_fields.py  write_draft.py
src/hoiku_agent/web/: CLAUDE.md  __init__.py  auth.py  chohyo_pdf.py  docx_fill.py  iap.py  improver_stream.py  proofread.py  routes.py  upload_extract.py  upload_parse.py  workspace.py
src/hoiku_agent/web/static/: adk.js  app.js  classes.js  diaryform.js  docedit.js  docflow.js  feedback.js  improver.js  index.html  notation.js  policy.js  privacy.html  records.js  scopes.js  styles.css  terms.html  ui.js  welcome.css  welcome.html
src/hoiku_agent/web/templates/: child_record.docx  monthly_0_2.docx  monthly_3_5.docx  nursery_record.docx
tests/: conftest.py  test_agents.py  test_chohyo_pdf.py  test_docx_fill.py  test_eval.py  test_eval_cases.py  test_eval_gate.py  test_improver.py  test_instructions.py  test_logging_config.py  test_provision_rag.py  test_rag_retrieval_eval.py  test_smoke.py  test_tools.py  test_web.py
tests/fixtures/: rag_retrieval_cases.json
tests/test_e2e/: test_child_record_e2e.py  test_class_monthly_e2e.py  test_monthly_e2e.py  test_nursery_record_e2e.py  test_pipeline_e2e.py  test_proofread_e2e.py
tests/test_harness/: _doc_fixtures.py  test_aggregate.py  test_child_record.py  test_child_record_period.py  test_class_monthly.py  test_db_schema_drift.py  test_demo_seed.py  test_draft.py  test_draft_golden.py  test_finalize.py  test_git_ops.py  test_llm_budget.py  test_memory_writeback.py  test_monthly.py  test_notation_store.py  test_nursery_record.py  test_pipeline_gate.py  test_policy_store.py  test_prompts.py  test_record_store.py  test_reference.py  test_schema_check.py  test_template_store.py
tests/test_harness/golden/: child_record.txt  diary_0_2.txt  diary_0_2_minimal.txt  diary_3_5.txt  monthly.txt  nursery_record.txt
