[project]
name = "hoiku-agent"
version = "0.1.0"
description = "保育士の書類作成を支援するAIエージェント（DevOps × AI Agent Hackathon 2026）"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Google ADK（エージェント本体）。2.x 系 API（LongRunningFunctionTool / BaseAgent._run_async_impl /
    # AgentEvaluator の async 化 / tool_context.search_memory）に依存するため下限を 2.3 に固定。
    "google-adk>=2.3,<3",
    # Vertex AI（Gemini / RAG Engine / Agent Engine）
    "google-cloud-aiplatform[adk,agent-engines]>=1.95.0",
    # 設定・スキーマ
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    # 本番/ローカル共通の入口 server.py（get_fast_api_app）を `uvicorn server:app` で起動するため明示
    # （ADK 経由で間接的に入るが、デプロイ手順が依存するので直接依存に固定する）。
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hoiku_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
# src＝パッケージ（hoiku_agent）、"."＝repo root の入口 server.py を import 可能にする。
pythonpath = ["src", "."]
testpaths = ["tests"]
