[project]
name = "hoiku-agent"
version = "0.1.0"
description = "保育士の書類作成を支援するAIエージェント（DevOps × AI Agent Hackathon 2026）"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Google ADK（エージェント本体）。2.x 系 API（LongRunningFunctionTool / BaseAgent._run_async_impl /
    # AgentEvaluator の async 化 / tool_context.search_memory）に依存するため下限を 2.3 に固定。
    "google-adk>=2.3,<3",
    # Vertex AI（Gemini / RAG Engine / Agent Engine）
    "google-cloud-aiplatform[adk,agent-engines]>=1.95.0",
    # 設定・スキーマ
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    # 本番/ローカル共通の入口 server.py（get_fast_api_app）を `uvicorn server:app` で起動するため明示
    # （ADK 経由で間接的に入るが、デプロイ手順が依存するので直接依存に固定する）。
    "uvicorn>=0.30",
    # 帳票PDF出力（層A/web の presentation・/api/export-pdf）。純 pip・システムライブラリ不要（apt/Cairo/Pango 不要）。
    # 日本語は IPAex ゴシックを埋め込む（src/hoiku_agent/web/fonts/ipaexg.ttf・再配布可＝IPA Font License v1.0・
    # reportlab がサブセット埋め込み）。フォントは COPY src で同梱＝Dockerfile 不変（web/chohyo_pdf.py）。
    "reportlab>=4.0",
    # 書類アーカイブ＝確定書類・児童マスタ・監査証跡（harness/record_store・Cloud SQL PostgreSQL）。
    # DATABASE_URL 未設定は降格＝接続しない（RAG/Memory/GCS と同じ）。テストは sqlite で回るため
    # 決定論 CI に creds は不要。Cloud SQL へは unix ソケット（/cloudsql/…）を psycopg で直結し
    # 追加のコネクタライブラリは持たない。
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]
# 層B 評価ゲートのローカル採点（eval/run_gate.py の ADK rubric メトリクス駆動）に要る依存。
# ADK の評価レジストリ（LocalEvalService）は pandas/rouge-score 等に依存するため、google-adk の
# `eval` extra でまとめて引く（個別列挙より乖離しにくい）。CI 層A（決定論）には入れない＝未導入なら
# run_gate は passed=None で降格する（偽の緑を出さない＝§12）。
# 採点を回すには `uv sync --extra eval` ＋ LLM 資格情報（Vertex/Gemini）が前提。
eval = [
    "google-adk[eval]>=2.3,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hoiku_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
# src＝パッケージ（hoiku_agent）、"."＝repo root の入口 server.py を import 可能にする。
pythonpath = ["src", "."]
testpaths = ["tests"]
