[project]
name = "hoiku-agent"
version = "0.1.0"
description = "保育士の書類作成を支援するAIエージェント（DevOps × AI Agent Hackathon 2026）"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Google ADK（エージェント本体）。2.x 系 API（LongRunningFunctionTool / BaseAgent._run_async_impl /
    # AgentEvaluator の async 化 / tool_context.search_memory）に依存するため下限を 2.3 に固定。
    "google-adk>=2.3,<3",
    # Vertex AI（Gemini / RAG Engine / Agent Engine）
    "google-cloud-aiplatform[adk,agent-engines]>=1.95.0",
    # 設定・スキーマ
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    # 本番/ローカル共通の入口 server.py（get_fast_api_app）を `uvicorn server:app` で起動するため明示
    # （ADK 経由で間接的に入るが、デプロイ手順が依存するので直接依存に固定する）。
    "uvicorn>=0.30",
    # 帳票PDF出力（層A/web の presentation・/api/export-pdf）。純 pip・システムライブラリ不要（apt/Cairo/Pango 不要）。
    # 日本語は IPAex ゴシックを埋め込む（src/hoiku_agent/web/fonts/ipaexg.ttf・再配布可＝IPA Font License v1.0・
    # reportlab がサブセット埋め込み）。フォントは COPY src で同梱＝Dockerfile 不変（web/chohyo_pdf.py）。
    "reportlab>=4.0",
    # 書類アーカイブ＝確定書類・児童マスタ・監査証跡（harness/record_store・Cloud SQL PostgreSQL）。
    # DATABASE_URL 未設定は降格＝接続しない（RAG/Memory/GCS と同じ）。テストは sqlite で回るため
    # 決定論 CI に creds は不要。Cloud SQL へは unix ソケット（/cloudsql/…）を psycopg で直結し
    # 追加のコネクタライブラリは持たない。
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "python-docx>=1.1",
    # 書類アップロード取込（web/upload_extract・「書類を見る」タブ）。docx は python-docx（上）で、
    # xlsx は openpyxl でテキスト抽出する（純 pip・システムライブラリ不要＝Dockerfile 不変）。
    # pdf は Gemini マルチモーダルへ inline_data で直接渡すため追加のPDFライブラリは持たない。
    "openpyxl>=3.1",
    # アップロードの multipart 受信（FastAPI UploadFile が依存）。google-adk 経由で間接的に入るが、
    # 取込エンドポイント（/api/parse-upload）が直接依存するので明示固定する（uvicorn と同じ流儀）。
    "python-multipart>=0.0.9",
    # Google Sign-In の ID token をサーバ側で署名・audience・有効期限まで検証する。
    "google-auth>=2.0",
    # Google Sign-In 後の identity を改ざん不能な session cookie に保持する（Starlette の直接依存）。
    "itsdangerous>=2.2",
    # Cloud Trace へのスパンエクスポート（可観測性・server.py の trace_to_cloud）。ADK は import する
    # だけで同梱しない（extras=gcp/all のみ）。現状 google-cloud-aiplatform[agent-engines] 経由で間接的に
    # 入るが、無いと TRACE_TO_CLOUD=true で起動時 ImportError になるため明示固定する（uvicorn と同じ流儀）。
    "opentelemetry-exporter-gcp-trace>=1.9,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]
# 層B 評価ゲートのローカル採点（eval/run_gate.py の ADK rubric メトリクス駆動）に要る依存。
# ADK の評価レジストリ（LocalEvalService）は pandas/rouge-score 等に依存するため、google-adk の
# `eval` extra でまとめて引く（個別列挙より乖離しにくい）。CI 層A（決定論）には入れない＝未導入なら
# API は採点不能を passed=None で表現し、eval-gate CI は --strict で非0終了にする（§12）。
# 採点を回すには `uv sync --extra eval` ＋ LLM 資格情報（Vertex/Gemini）が前提。
eval = [
    "google-adk[eval]>=2.3,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hoiku_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
# src＝パッケージ（hoiku_agent）、"."＝repo root の入口 server.py を import 可能にする。
pythonpath = ["src", "."]
testpaths = ["tests"]
